# UBX_ROS_DRIVER

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: default.yaml
launch/: UBXNode.launch
nodes/: ubx_ros
scripts/: setup.sh
src/: core.py
udev/: 99-serial.rules
