<?xml version="1.0"?>
<package format="2">
  <name>UBX_ROS_DRIVER</name>
  <version>0.1.0</version>
  <description>A lightweight python library for translating UBX packets</description>

  <maintainer email="gchustz@tamu.edu">George Chustz</maintainer>
  <author email='gchustz@tamu.edu'>George Chustz</author>
  <license>GNU GPL v3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>   
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>